# metafunction

./: .env.example  .env.test  .gitignore  Makefile  README.md  app.py  cli.py  hatch.toml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: test.yml
api/: database.py  settings.py
api/endpoints/: auth.py  function.py  spec.py  user.py
api/models/: __init__.py  credential.py  credential_type.py  function.py  user.py
api/models/types/: __init__.py  encrypted_json.py  encrypted_type.py
api/schemas/: credential.py  credential_type.py  function.py  spec.py  user.py
api/security/: __init__.py  oauth2.py
config/: settings.py
docs/: prompts.md
src/metafunction/: __about__.py  __init__.py  auth.py  cli.py  crud.py  database.py  helpers.py  repositories.py  responses.py  security.py  settings.py
src/metafunction/auth/: __init__.py  routes.py
src/metafunction/credentials/: crud.py  models.py  routes.py
src/metafunction/crud/: credentials.py  functions.py  users.py
src/metafunction/database/: __init__.py  credential.py  credential_type.py  function.py  user.py
src/metafunction/database/types/: __init__.py  encrypted_json.py  encrypted_type.py
src/metafunction/endpoints/: auth.py  credentials.py  function.py  functions.py  user.py  users.py
src/metafunction/functions/: crud.py  models.py  routes.py
src/metafunction/models/: __init__.py  credential.py  credential_type.py  function.py  user.py
src/metafunction/models/types/: __init__.py  encrypted_json.py  encrypted_type.py
src/metafunction/security/: __init__.py  oauth2.py
src/metafunction/types/: encrypted_type.py
src/metafunction/users/: crud.py  models.py  routes.py
tests/: conftest.py  test_auth.py  test_users.py
tests/crud/: test_credentials.py  test_functions.py  test_users.py
tests/endpoints/: test_credentials.py  test_functions.py  test_users.py
tests/routes/: test_auth.py  test_credentials.py  test_functions.py  test_users.py
